--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Majreha khasanah</title>
+    <title>MAJREHA KHASANAH</title>
 
     <!-- CSS Bootstrap -->
     <link
@@ -13,14 +13,14 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="setile.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body id="home">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-primary py-3 fixed-top">
+    <nav class="navbar navbar-expand-lg bg-primary py-3 sticky-top">
       <div class="container">
-        <a class="navbar-brand text-white fw-bold" href="#">Majreha Khasanah</a>
+        <a class="navbar-brand text-white fw-bold" href="#">MAJREHA KHASANAH</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -36,8 +36,8 @@
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
               <a class="nav-link active text-white" aria-current="page" href="#"
-                >Beranda</a
-              >
+                ><i class="bx bx-home-alt fs-4"></i>
+              </a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-white" href="#about">Tentang</a>
@@ -62,15 +62,22 @@
           <div class="col-lg-7 text-center text-lg-start mb-5 mb-lg-0">
             <h1 class="fw-bold mb-3">
               Selamat Datang Di<br />
-              Website Saya <span class="text-primary">Majreha khasanah</span>
+              Website Saya
+              <span class="text-primary">MAJREHA KHASANAH (RHEA)</span>
             </h1>
             <p class="lh-lg mb-4">
               Ini adalah Website Portofolio sederhana saya yang dibuat
               menggunakan Bootstrap
             </p>
             <div>
-              <a href="#" class="btn btn-primary me-2 shadow-sm">Download CV</a>
-              <a href="#" class="btn btn-outline-primary shadow-sm"
+              <a
+                href="https://drive.google.com/file/d/13lKPPxbUSlBVHbw0MQjzOoDMK0m7qMVM/preview"
+                class="btn btn-primary me-2 shadow-sm"
+                >Download CV</a
+              >
+              <a
+                href="https://drive.google.com/file/d/1zcXG2MmqEezn8NFpZXMN814BEGmqL6aE/view?usp=drive_link"
+                class="btn btn-outline-primary shadow-sm"
                 >Project Saya</a
               >
             </div>
@@ -117,7 +124,7 @@
           <div class="col-lg-4 mb-4">
             <div
               class="card shadow border-0"
-              style="width: 360px; height: 460px"
+              style="width: 360px; height: 360px"
             >
               <div class="card-body text-center">
                 <img
@@ -133,12 +140,28 @@
           <!-- Deskripsi -->
           <div class="col-lg-6 mb-4">
             <p>
-              Saya adalah seorang pengembang web dan peminat teknologi yang
-              gemar membuat aplikasi modern dan interaktif. Fokus saya adalah
-              membangun solusi digital yang fungsional dan mudah digunakan.
+              Saya adalah mahasiswa di Sekolah Tinggi Meteorologi Klimatologi
+              dan Geofisika (STMKG), khususnya mengambil jurusan Klimatologi. Di
+              luar bidang akademik, saya memiliki ketertarikan yang kuat
+              terhadap seni dan olahraga, yang saya jadikan sebagai sarana untuk
+              mengekspresikan diri serta menjaga keseimbangan hidup.fokus utama
+              saya adalah memanfaatkan teknologi digital untuk mengakses data
+              dan informasi meteorologi secara real-time, serta mengembangkan
+              kemampuan analisis saya di bidang klimatologi. Selain itu, saya
+              juga menggunakan web sebagai platform untuk belajar, berkreasi,
+              dan berbagi karya seni, sekaligus mengikuti perkembangan terbaru
+              dalam dunia olahraga yang saya minati.
             </p>
-            <a href="#" class="btn btn-primary me-2 shadow-sm">Download CV</a>
-            <a href="#" class="btn btn-outline-primary shadow-sm">Contact</a>
+            <a
+              href="https://drive.google.com/file/d/13lKPPxbUSlBVHbw0MQjzOoDMK0m7qMVM/preview"
+              class="btn btn-primary me-2 shadow-sm"
+              >Download CV</a
+            >
+            <a
+              href="https://www.instagram.com/rrhea_19/"
+              class="btn btn-outline-primary shadow-sm"
+              >Contact</a
+            >
           </div>
         </div>
       </div>
@@ -168,23 +191,24 @@
             <h2 class="fw-bold mb-2">
               <span class="text-primary">Skill </span>Saya
             </h2>
-            <p>
-              Ini adalah Website Portofolio sederhana saya yang dibuat
-              menggunakan Bootstrap
-            </p>
+            <p>Berikut adalah skill yang saya miliki dan saya pelajari</p>
           </div>
         </div>
         <div class="row">
           <div class="col-md-4 mb-4">
             <div class="card shadow">
               <div class="card-body text-center">
-                <!-- <i class="bx bx-camera-alt text-primary fs-1"></i> -->
-                <i class="bx bx-message-bubble-dots-2 text-primary fs-1"></i>
-                <h5 class="card-title fw-bold">Fotografi</h5>
+                <i class="bx bx-megaphone-alt text-primary fs-1"></i>
+                <h5 class="card-title fw-bold">Public Speaking</h5>
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Distinctio unde deserunt nihil provident nobis maiores fuga
-                  dolor vero doloribus ullam.
+                  Saya memiliki kemampuan public speaking yang baik, dengan
+                  kemampuan menyampaikan ide dan informasi secara jelas, percaya
+                  diri, dan menarik di depan berbagai audiens. Saya terbiasa
+                  berbicara di depan kelas, seminar, atau kelompok diskusi,
+                  serta mampu mengatur alur pembicaraan agar mudah dipahami.
+                  Skill ini saya kembangkan untuk mendukung komunikasi efektif,
+                  terutama dalam menyampaikan materi klimatologi maupun saat
+                  berbagi ide kreatif di bidang seni dan olahraga.
                 </p>
               </div>
             </div>
@@ -193,11 +217,16 @@
             <div class="card shadow">
               <div class="card-body text-center">
                 <i class="bx bx-video-cinema text-primary fs-1"></i>
-                <h5 class="card-title fw-bold">Videografi</h5>
+                <h5 class="card-title fw-bold">Fotografer</h5>
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Distinctio unde deserunt nihil provident nobis maiores fuga
-                  dolor vero doloribus ullam.
+                  Saya memiliki kemampuan dalam bidang fotografi, mulai dari
+                  pengambilan gambar dengan komposisi yang estetis hingga
+                  pengeditan foto untuk menghasilkan visual yang menarik dan
+                  berkualitas. Hobi ini saya gunakan sebagai media ekspresi seni
+                  sekaligus dokumentasi momen penting, baik dalam kehidupan
+                  sehari-hari maupun kegiatan akademik dan olahraga. Dengan
+                  kemampuan fotografi, saya dapat menangkap detail dan suasana
+                  yang memperkuat pesan atau cerita di balik sebuah gambar.
                 </p>
               </div>
             </div>
@@ -205,54 +234,18 @@
           <div class="col-md-4 mb-4">
             <div class="card shadow">
               <div class="card-body text-center">
-                <i class="bxr bx-file-code text-primary fs-1"></i>
-                <h5 class="card-title fw-bold">Coding</h5>
+                <i class="bx bx-running text-primary fs-1"></i>
+                <h5 class="card-title fw-bold">ART and Sport</h5>
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Distinctio unde deserunt nihil provident nobis maiores fuga
-                  dolor vero doloribus ullam.
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-4 mb-4">
-            <div class="card shadow">
-              <div class="card-body text-center">
-                <!-- <i class="bxr bx-minus-shield text-primary fs-1"></i> -->
-                <i class="bx bx-stadium text-primary fs-1"></i>
-                <h5 class="card-title fw-bold">Cyber Security</h5>
-                <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Distinctio unde deserunt nihil provident nobis maiores fuga
-                  dolor vero doloribus ullam.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 mb-4">
-            <div class="card shadow">
-              <div class="card-body text-center">
-                <i class="bx bx-camera-alt text-primary fs-1"></i>
-                <h5 class="card-title fw-bold">Fotografi</h5>
-                <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Distinctio unde deserunt nihil provident nobis maiores fuga
-                  dolor vero doloribus ullam.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 mb-4">
-            <div class="card shadow">
-              <div class="card-body text-center">
-                <i class="bx bx-camera-alt text-primary fs-1"></i>
-                <h5 class="card-title fw-bold">Fotografi</h5>
-                <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Distinctio unde deserunt nihil provident nobis maiores fuga
-                  dolor vero doloribus ullam.
+                  Saya memiliki kemampuan dalam bidang seni musik dan olahraga
+                  baris-berbaris. Keterampilan ini saya peroleh melalui berbagai
+                  pelatihan dan kegiatan ketarunaan. Dalam seni musik dan tari,
+                  saya belajar bekerja sama dalam tim serta menampilkan karya
+                  pada acara resmi. Sementara itu, olahraga baris-berbaris
+                  melatih saya untuk disiplin, fokus, dan tanggap terhadap
+                  komando. Semua pengalaman ini membentuk karakter saya sebagai
+                  taruna yang menjunjung tinggi semangat korps dan tanggung
+                  jawab.
                 </p>
               </div>
             </div>
@@ -269,10 +262,7 @@
             <h2 class="fw-bold mb-2">
               <span class="text-primary">Portofolio </span>Saya
             </h2>
-            <p>
-              Ini adalah Website Portofolio sederhana saya yang dibuat
-              menggunakan Bootstrap
-            </p>
+            <p>berikut adalah portofolio saya</p>
           </div>
         </div>
         <div class="row">
@@ -280,11 +270,14 @@
             <div class="card shadow h-100 d-flex flex-column">
               <img src="koceng 2.jpg" alt="Portofolio 1" class="card-img-top" />
               <div class="card-body d-flex flex-column">
-                <h3>Programming</h3>
+                <h3>MC</h3>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content. Lorem ipsum, dolor sit amet
-                  consectetur adipisicing elit. Tenetur, praesentium?
+                  Seorang taruna STMKG yang memiliki pengalaman sebagai Master
+                  of Ceremony di berbagai acara formal dan non-formal. Mampu
+                  membawakan acara dengan intonasi yang tepat, artikulasi jelas,
+                  serta menjaga suasana acara agar tetap tertib, hangat, dan
+                  menarik. Terbiasa tampil di depan umum dan menguasai teknik
+                  public speaking, improvisasi, serta penguasaan alur acara.
                 </p>
                 <a href="#" class="btn btn-primary mt-auto">Selengkapnya</a>
               </div>
@@ -294,12 +287,14 @@
             <div class="card shadow h-100 d-flex flex-column">
               <img src="koceng3.jpg" alt="Portofolio 1" class="card-img-top" />
               <div class="card-body d-flex flex-column">
-                <h3>Mikrokontroller</h3>
+                <h3>Seni Musik dan Tari</h3>
                 <p class="card-text">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia,
-                  magnam optio! Facilis quod deleniti vero assumenda eligendi,
-                  veritatis placeat pariatur! Lorem ipsum dolor sit amet
-                  consectetur adipisicing elit.
+                  Saya adalah seorang taruna STMKG yang memiliki ketertarikan
+                  dan kemampuan dalam bidang seni, khususnya musik dan tari.
+                  Aktif dalam berbagai kegiatan kesenian kampus dan luar kampus,
+                  baik sebagai penampil maupun penggagas acara. Seni saya
+                  jadikan sebagai media ekspresi, penguat budaya, serta sarana
+                  mempererat semangat korps dan kekompakan antar taruna
                 </p>
                 <a href="#" class="btn btn-primary mt-auto">Selengkapnya</a>
               </div>
@@ -309,10 +304,14 @@
             <div class="card shadow h-100 d-flex flex-column">
               <img src="koceng.jpg" alt="Portofolio 1" class="card-img-top" />
               <div class="card-body d-flex flex-column">
-                <h3>Mikrokontroller</h3>
+                <h3>Olahraga</h3>
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+                  Saya adalah taruna STMKG yang aktif di bidang olahraga,
+                  khususnya bola basket dan bola voli. Olahraga bagi saya bukan
+                  hanya tentang fisik, tetapi juga membangun kerja sama tim,
+                  strategi, kepemimpinan, dan semangat sportif. Saya telah
+                  mengikuti berbagai kompetisi dan latihan intensif baik di
+                  lingkungan kampus maupun eksternal.
                 </p>
                 <a href="#" class="btn btn-primary mt-auto">Selengkapnya</a>
               </div>
@@ -338,11 +337,11 @@
             <a href="#" class="text-white me-3 text-decoration-none">
               <i class="bi bi-facebook"></i>
             </a>
-            <a href="#" class="text-white me-3 text-decoration-none">
+            <a
+              href="https://www.instagram.com/rrhea_19/"
+              class="text-white me-3 text-decoration-none"
+            >
               <i class="bi bi-instagram"></i>
-            </a>
-            <a href="#" class="text-white text-decoration-none">
-              <i class="bi bi-linkedin"></i>
             </a>
           </div>
         </div>
