--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
         <div class="row">
           <div class="col-md-4 mb-4">
             <div class="card shadow h-100 d-flex flex-column">
-              <img src="koceng 2.jpg" alt="Portofolio 1" class="card-img-top" />
+              <img src="mc.jpg" alt="Portofolio 1" class="card-img-top" />
               <div class="card-body d-flex flex-column">
                 <h3>MC</h3>
                 <p class="card-text">
@@ -285,7 +285,7 @@
           </div>
           <div class="col-md-4 mb-4">
             <div class="card shadow h-100 d-flex flex-column">
-              <img src="koceng3.jpg" alt="Portofolio 1" class="card-img-top" />
+              <img src="dance.jpg" alt="Portofolio 1" class="card-img-top" />
               <div class="card-body d-flex flex-column">
                 <h3>Seni Musik dan Tari</h3>
                 <p class="card-text">
@@ -302,7 +302,7 @@
           </div>
           <div class="col-md-4 mb-4">
             <div class="card shadow h-100 d-flex flex-column">
-              <img src="koceng.jpg" alt="Portofolio 1" class="card-img-top" />
+              <img src="basket.jpg" alt="Portofolio 1" class="card-img-top" />
               <div class="card-body d-flex flex-column">
                 <h3>Olahraga</h3>
                 <p class="card-text">
